<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity"
    android:padding="@dimen/normalMargin"
    app:layoutDescription="@xml/activity_main_scene">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_lights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/lightgold"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/message_prayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/message_megrab_prayer"
        android:textColor="@color/white"
       android:textSize="@dimen/largeFont"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation_lights" />
        <TextView
            android:id="@+id/next_prayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/the_next_prayer_is"
            android:textColor="@color/white"
            android:layout_margin="@dimen/normalMargin"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_prayer" />
        <LinearLayout
            android:id="@+id/next_prayer_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:background="@drawable/rounded_card"

            android:padding="@dimen/smallPadding"
            app:layout_constraintTop_toBottomOf="@id/next_prayer"
            android:orientation="horizontal"
                >
            <TextView
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/maghreb"
                android:textColor="@color/gray"
                android:textSize="@dimen/normalFontSize"
                android:layout_weight="1"
               />
                <TextView
                    android:gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/maghreb_time"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/normalFontSize"
               />
            </LinearLayout>
        <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/cover"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <LinearLayout
        android:id="@+id/pray_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/animation_cover"
         android:background="@drawable/rounded_card"
        android:padding="@dimen/smallPadding"
        android:orientation="vertical"

        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/todayـprayer"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumFont"
        app:layout_constraintBottom_toBottomOf="parent"
       />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/the_prayer"
            android:textColor="@color/gray"
            android:textSize="@dimen/normalFontSize"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/swipe_for_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/prayerـswiep_times_for_today"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pray_card" />

</androidx.constraintlayout.motion.widget.MotionLayout>